// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GivenTweet_WhenPublishTweet_ThenANewTweetIsReturned 1`] = `
{
  "id": Any<String>,
  "publishedAt": 1701561649.243,
  "publishedBy": "some-user-id",
  "text": "some-text",
  "user": {
    "avatar": "some-image.png",
    "id": "some-user-id",
    "name": "some-user",
  },
}
`;

exports[`GivenTweet_WhenPublishTweet_ThenANewTweetIsStored 1`] = `
{
  "id": Any<String>,
  "publishedAt": "1701561650.365",
  "publishedBy": "some-user-id",
  "text": "some-text",
}
`;
